Se añaden referencias

--- a/src/EDA-DatosBursatilesMundiales.ipynb
+++ b/src/EDA-DatosBursatilesMundiales.ipynb
@@ -13,7 +13,7 @@
    "id": "39e78ded",
    "metadata": {},
    "source": [
-    "Proyecto intermedio con análisis EDA de la clase de Desarrollo de Proyectos de la Maestría en Ciencia de los Datos (MCD) de la Universidad de Guadalajara (UDG) en el Centro Universitario de Ciencias Económico Administrativas (CUCEA). "
+    "Proyecto intermedio con análisis EDA de la clase de Desarrollo de Proyectos de la Maestría en Ciencia de los Datos (MCD)."
    ]
   },
   {
